# timetable-module

./: .gitignore  LICENSE  README.md  pyproject.toml
src/timetable/cli/: build.py  init.py  status.py  utils.py  validate.py
src/timetable/cli/build_stages/: stage2.py  stage3.py  stage4.py  stage5.py
src/timetable/config/: settings.py
src/timetable/core/: __init__.py  loader.py  semester_detector.py
src/timetable/models/: __init__.py  stage1.py  stage2.py  stage3.py  stage4.py  stage5.py  stage6.py
src/timetable/scripts/stage2/: build_all.py  build_faculty_full.py  build_subjects_full.py  calculate_workload.py  data_loader.py  expand_components.py  validate_stage2.py
src/timetable/scripts/stage3/: assignment_generator.py  build_all.py  build_assignments_sem1.py  build_assignments_sem2.py  build_assignments_sem3.py  build_assignments_sem4.py  constraint_builder.py  data_loader_stage2.py  generate_overlap_matrix.py  generate_reports.py  generate_statistics.py  room_preference_extractor.py  validate_stage3.py
src/timetable/scripts/stage4/: build_scheduling_input.py  view_scheduling_input.py
src/timetable/scripts/stage5/: generate_schedule_template.py  schedule.py
src/timetable/scripts/stage6/: analyze_schedule.py  enrich_schedule.py  generate_faculty_views.py  generate_student_views.py  validate_assignments.py
src/timetable/stages/stage_1/: config.json  elective2Differentiation.json  elective3Differentiation.json  electiveDifferentiation.json  faculty3Basic.json  facultyBasic.json  room3Preferences.json  roomPreferences.json  student3Groups.json  studentGroups.json  subjects1CoreBasic.json  subjects1Diff.json  subjects2CoreBasic.json  subjects2Diff.json  subjects2ElectBasic.json  subjects3CoreBasic.json  subjects3Diff.json  subjects3ElectBasic.json  subjects4Diff.json
tests/: conftest.py
tests/unit/: test_stage2_models.py
